# mbkb

./: .gitignore  Cargo.toml  blinky.html  openocd.gdb
f103/: Cargo.toml  Embed.toml  notes.md
f103/.cargo/: config.toml
f103/src/: main.rs  main0.rs.txt
src/: lib.rs  phy.rs  physical.rs  proto.rs
src/phy/: layouts.rs  top.rs
src/physical/: usb.rs
src/proto/: kc.rs  leds.rs  usb.rs
