[package]
name = "mbkb"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = { version = "0.2.7", features = ["unproven"] }
usb-device = "0.2.4"
usbd-serial = "0.1"
usbd-webusb = "1.0.0"
enumn = "0.1.3"

[workspace]
members = ["f103"]

[profile.release]
debug = true
