[package]
name = "f103"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
stm32f1xx-hal = { version = "0.7", features = ["stm32f103", "stm32-usbd", "rt"] }
panic-semihosting = "0.5"
usb-device = "0.2.4"
usbd-serial = "0.1"
usbd-webusb = "1.0.0"
embedded-hal = "0.2.3"
cortex-m-rtic = "0.5"

mbkb = { path = ".." }
